<resources>
    <string name="app_name">MyNutrition</string>
    <string name="dialog_message">Would you like to add a new meal?</string>
    <string name="dialog_title">Create a new meal</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="mealName">Title</string>
    <string name="contentDesc">image</string>
    <string name="search_my_meals"><i>Search my meals</i></string>
    <string name="general">", "</string>
    <string name="parenthesisOpen">" ("</string>
    <string name="parenthesisClose">" kcal)"</string>
    <string name="ingredients">Ingredients</string>
    <string name="typical_nutritional_value_per">"Typical nutritional value per "</string>
    <string name="typical_nutritional_value_per_100g">"Typical value per 100g"</string>
    <string name="energy">Energy</string>
    <string name="protein">Protein</string>
    <string name="kJ">" kJ"</string>
    <string name="g">g</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="of_which_sugars">of which sugars</string>
    <string name="of_which_starch">of which starch</string>
    <string name="fat">Fat</string>
    <string name="of_which_saturates">of which saturates</string>
    <string name="monounsaturates">mono-unsaturates</string>
    <string name="polyunsaturates">polyunsaturates</string>
    <string name="salt">Salt</string>
    <string name="fibre">Fibre</string>
    <string name="kcal">" kcal"</string>
    <string name="create_meal">Create a meal</string>
    <string name="edit_meal">Edit your meal</string>
    <string name="ingredients_details">Ingredient\'s details</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="search_ingredient">Search ingredients</string>
    <string name="nutritional_value">Nutritional Value</string>
    <string name="meal_deleted">Meal deleted</string>
    <string name="enter_meal">Enter your meal name</string>
    <string name="kcal_per_100g_see_details">" kcal/100g"</string>
    <string name="saved">Saved</string>
    <string name="nutrition">nutrition</string>
    <string name="search_for_components">Search for components</string>
    <string name="create_new_meal">Create new meal</string>
    <string name="parenthesiskJClose">kJ)</string>
    <string name="img_resource">img resource</string>
    <string name="saved_meals">Saved meals</string>
    <string name="sort_by_date_created">Sort by date created</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="delete_all">Delete all</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="kg">kg</string>
    <string name="l">l</string>
    <string name="ml">ml</string>
    <string name="add">add</string>

</resources>
