<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:padding="10dp"
        android:scaleType="center"
        android:text="@string/create_new_meal"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/mealNameEditText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="18sp"
        android:windowSoftInputMode="stateVisible"
        android:imeOptions="actionDone"
        android:hint="@string/mealName"
        tools:ignore="Autofill" />

</LinearLayout>