<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/mealColorTextView"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/mealColorTextView"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mealNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:layout_marginBottom="2dp"
                android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kcalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kcalUnitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/generalTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parenthesisOpen"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kjTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/generalTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parenthesiskJClose"
                android:textSize="18sp" />
        </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>