<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.ingredientSearch.SearchIngredientActivity">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        layout="@layout/toolbar_layout" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/editTextSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll">

        <RelativeLayout
            android:id="@+id/searchIngredientRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/searchIngredientEditText"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:windowSoftInputMode="stateVisible"
                android:imeOptions="actionDone"
                android:background="@drawable/bg_searching_section"
                android:hint="@string/search_ingredient"
                android:inputType="text"
                android:paddingStart="32dp"
                tools:ignore="Autofill,RtlSymmetry" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignStart="@id/searchIngredientEditText"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/contentDesc"
                android:alpha="0.6"
                android:src="@drawable/ic_search" />

            <ImageView
                android:id="@+id/clearTextImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignEnd="@+id/searchIngredientEditText"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:alpha="0.6"
                android:contentDescription="@string/contentDesc"
                android:src="@drawable/ic_clear" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/searchOptionLt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchIngredientRl"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/searchOptionSwitch"
                android:text="@string/search_for_components"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/searchOptionSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:buttonTint="@android:color/white" />

        </RelativeLayout>

    </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mealIngredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    </androidx.recyclerview.widget.RecyclerView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>